Name changed to omrapp from Rio

--- a/Rio/Rio.Web/Modules/Membership/Account/SignUp/AccountSignUp.cshtml
+++ b/Rio/Rio.Web/Modules/Membership/Account/SignUp/AccountSignUp.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Serenity.ITextLocalizer Localizer
+@inject Serenity.ITextLocalizer Localizer
 @{
     ViewData["Title"] = Texts.Forms.Membership.SignUp.FormTitle.ToString(Localizer);
     ViewData["PageId"] = "SignUp";
@@ -9,7 +9,7 @@
     <h2 class="text-center p-4">
         <img src="@Url.Content("~/Content/site/images/serenity-logo-w-128.png")" 
             class="rounded-circle p-1" style="background-color: var(--s-sidebar-band-bg)"
-            width="50" height="50" /> Rio
+            width="50" height="50" /> omrapp
     </h2>
 
     <div class="s-Panel p-4">
