Email message updated as per OMR. Admin dropdown issue solved.

--- a/Rio/Rio.Web/Modules/Membership/Publisher/SignUp/TenantApprovedEmail.cshtml
+++ b/Rio/Rio.Web/Modules/Membership/Publisher/SignUp/TenantApprovedEmail.cshtml
@@ -180,7 +180,7 @@
                 <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
 
                     <!-- START CENTERED WHITE CONTAINER -->
-                    <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Activate your Rioplay 2021 account </span>
+                    <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Activate your OMRApp account </span>
 
                     <!-- START HEADER -->
                     <div class="header" style="margin-bottom: 20px; Margin-top: 10px; width: 100%;">
@@ -210,8 +210,8 @@
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
                                     <tr>
                                         <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
-                                            <h1 style="color: #222222; font-family: sans-serif; font-weight: 300; line-height: 1.4; margin: 0; Margin-bottom: 30px; font-size: 35px; text-align: center; text-transform: capitalize;">Welcome to Rioplay!</h1>
-                                            <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; Margin: 0; Margin-bottom: 15px;">Hello,@Model.DisplayName<br /> we are glad to have found you! Welcome on board with Rioplay 2021.<br /> Here are a few steps to get you started: </p>
+                                            <h1 style="color: #222222; font-family: sans-serif; font-weight: 300; line-height: 1.4; margin: 0; Margin-bottom: 30px; font-size: 35px; text-align: center; text-transform: capitalize;">Welcome to OMRApp!</h1>
+                                            <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; Margin: 0; Margin-bottom: 15px;">Hello,@Model.DisplayName<br /> we are glad to have found you! Welcome on board with OMRApp.<br /> Here are a few steps to get you started: </p>
                                             <table border="0" cellpadding="0" cellspacing="0" class="hr" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
                                                 <tbody>
                                                     <tr>
@@ -272,7 +272,7 @@
                                                 </tbody>
                                             </table>
                                             <h2 style="color: #222222; font-family: sans-serif; font-weight: 400; line-height: 1.4; margin: 0; Margin-bottom: 15px; font-size: 28px;">2. Get yourself a free trial</h2>
-                                            <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; Margin: 0; Margin-bottom: 15px;">To understand the OMR app better, we have arranged a <strong>free trial</strong> for you. You can evaluate the Rioplay 2021 app by using the <strong>free credits</strong> to understand our system better. You have been credited with 20 free credits on creating your first product.</p>
+                                            <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; Margin: 0; Margin-bottom: 15px;">To understand the OMR app better, we have arranged a <strong>free trial</strong> for you. You can evaluate the OMRApp app by using the <strong>free credits</strong> to understand our system better. You have been credited with 20 free credits on creating your first product.</p>
                                             <table border="0" cellpadding="0" cellspacing="0" class="btn btn-secondary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box; min-width: 100% !important;" width="100%">
                                                 <tbody>
                                                     <tr>
