--- a/Rio/Rio.Web/Modules/Membership/Publisher/SignUp/TenantSignupEmail.cshtml
+++ b/Rio/Rio.Web/Modules/Membership/Publisher/SignUp/TenantSignupEmail.cshtml
@@ -9,7 +9,7 @@
 
     <p>Dear @Model.DisplayName,</p>
 
-    <p>Your Rio21 Publisher Account has been Successfully created </p>
+    <p>Your OMRApp Publisher Account has been Successfully created </p>
 
     <p>It will be Activated once Admin team will approve it</p>
 
