--- a/Rio/Rio.Web/Modules/Membership/Publisher/SignUp/PublisherActivateEmail.cshtml
+++ b/Rio/Rio.Web/Modules/Membership/Publisher/SignUp/PublisherActivateEmail.cshtml
@@ -2,12 +2,12 @@
 
 <html>
 <head>
-    <title>Activate your Rio account</title>
+    <title>Activate your OMRApp account</title>
 </head>
 <body>
     <p>@Model.DisplayName,</p>
 
-    <p>We received a request to create a new account on Rio with your e-mail address.</p>
+    <p>We received a request to create a new account on OMRApp with your e-mail address.</p>
 
     <p>Click the link below to activate your account:</p>
 
@@ -16,6 +16,6 @@
     <p>If it wasn't you who requested this, you can ignore this email.</p>
 
     Thanks,
-    The "Rio" Team
+    The "OMRApp" Team
 </body>
 </html>
