--- a/Rio/Rio.Web/wwwroot/Content/site/site.css
+++ b/Rio/Rio.Web/wwwroot/Content/site/site.css
@@ -19,18 +19,23 @@
 
 
 
-.s-Workspace-ScannedSheetGrid .failed-sheet .slick-cell,
-.s-Workspace-ScannedSheetGrid .failed-sheet .slick-cell a {
+.s-Workspace-ScannedSheetGrid .failedsheet .slick-cell,
+.s-Workspace-ScannedSheetGrid .failedsheet .slick-cell a {
   background-color: red;
 }
 
-.s-Workspace-ScannedSheetGrid .warning-sheet .slick-cell,
-.s-Workspace-ScannedSheetGrid .warning-sheet .slick-cell a {
+.s-Workspace-ScannedSheetGrid .warningsheet .slick-cell,
+.s-Workspace-ScannedSheetGrid .warningsheet .slick-cell a {
   background-color: orange;
 }
 
-.s-Workspace-ScannedSheetGrid .success-sheet .slick-cell,
-.s-Workspace-ScannedSheetGrid .success-sheet .slick-cell a {
+.s-Workspace-ScannedSheetGrid .successsheet .slick-cell,
+.s-Workspace-ScannedSheetGrid .successsheet .slick-cell a {
   background-color: green;
+}
+
+.s-Workspace-ScannedSheetGrid .Opensheet .slick-cell,
+.s-Workspace-ScannedSheetGrid .Opensheet .slick-cell a {
+  background-color: lightgrey;
 }
 
