Update Corrected Rollno and Examno updated in rectify

--- a/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
+++ b/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
@@ -26,7 +26,7 @@
     <div class="row" style="margin-bottom:10px;">
         <div class="col-md-6">
             
-            <img width="100%" height="80%" src="~/uploads/@Model.ScanQuestionList[0].ScannedSheetScannedImage" />
+            <img width="100%" height="80%" src="@Model.ScanQuestionList[0].ScannedSheetScannedImageSourcePath" />
             
         </div>
         <div class="col-md-6" style="overflow-y: scroll;height:600px;">
