--- a/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
@@ -1,8 +1,10 @@
-@model Rio.Web.Modules.Workspace.ExamResult.ExamResultReportData
+@model Rio.Web.Modules.Workspace.CommonController.Models.ExamResultReportModel
 
-@if ((bool?)ViewData["Printing"] == true)
-{
-    Layout = MVC.Views.Shared._LayoutNoNavigation;
+@{
+    ViewData["Printing"] = true;
+    Layout = User.IsLoggedIn() ?
+        "~/Views/Shared/_Layout.cshtml" :
+        "~/Views/Shared/_LayoutNoNavigation.cshtml";
 }
 
 <section class="result">
@@ -20,11 +22,15 @@
         <!-- /.col -->
         <div class="col-sm-4 result-col">
             To
-            <address>
-                @Model.Exam.Code<br>
-                @Model.Exam.Name<br>
-                @Model.Exam.TotalMarks<br>
-            </address>
+            @*<student>
+                @Model.Student.RollNo<br>
+                @Model.Student.FullName<br>
+            </student>*@
+            @*<exam>
+                @Model.ExamResult.ExamId<br>
+                @Model.ExamResult.ExamCode<br>
+                @Model.ExamResult.ExamName<br>
+            </exam>*@
         </div>
     </div>
     <!-- /.row -->
@@ -47,7 +53,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>@Model.Exam.Name</td>
+                        <td>@Model.ExamResult.ExamId</td>
                         <td>@Model.ExamResult.TotalQuestions.ToStringDefault())</td>
                         <td>@Model.ExamResult.TotalAttempted.ToStringDefault())</td>
                         <td>@Model.ExamResult.TotalNotAttempted.ToStringDefault())</td>
@@ -79,7 +85,7 @@
                     @foreach (var d in Model.Details)
                     {
                         <tr>
-                            <td>@d.ExamName</td>
+                            <td>@d.ExamId</td>
                             <td>@(d.QuestionIndex.ToStringDefault())</td>
                             <td>@(d.IsAttempted)</td>
                             <td>@(d.IsCorrect)</td>
