Exam Result Report Updated.

--- a/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
@@ -16,23 +16,23 @@
         </div>
     </div>
     <!-- info row -->
-    <div class="row result-info">
+    @*<div class="row result-info">
         <div class="col-sm-4 result-col">
         </div>
         <!-- /.col -->
         <div class="col-sm-4 result-col">
             To
-            @*<student>
+            <student>
                 @Model.Student.RollNo<br>
                 @Model.Student.FullName<br>
-            </student>*@
-            @*<exam>
+            </student>
+            <exam>
                 @Model.ExamResult.ExamId<br>
                 @Model.ExamResult.ExamCode<br>
                 @Model.ExamResult.ExamName<br>
-            </exam>*@
+            </exam>
         </div>
-    </div>
+    </div>*@
     <!-- /.row -->
     <!-- Table row -->
     <div class="row">
@@ -45,6 +45,7 @@
                     <tr>
                         <th>Exam</th>
                         <th>Total Questions</th>
+                        <th>Obtained Marks</th>
                         <th>Attempted</th>
                         <th>Not Attempted</th>
                         <th>Right</th>
@@ -54,11 +55,12 @@
                 <tbody>
                     <tr>
                         <td>@Model.ExamResult.ExamId</td>
-                        <td>@Model.ExamResult.TotalQuestions.ToStringDefault())</td>
-                        <td>@Model.ExamResult.TotalAttempted.ToStringDefault())</td>
-                        <td>@Model.ExamResult.TotalNotAttempted.ToStringDefault())</td>
-                        <td>@Model.ExamResult.TotalRightAnswers.ToStringDefault())</td>
-                        <td>@Model.ExamResult.TotalWrongAnswers.ToStringDefault())</td>
+                        <td>@Model.ExamResult.TotalQuestions.ToStringDefault()</td>
+                        <td>@Model.ExamResult.ObtainedMarks.ToStringDefault("#,##0.00")</td>
+                        <td>@Model.ExamResult.TotalAttempted.ToStringDefault()</td>
+                        <td>@Model.ExamResult.TotalNotAttempted.ToStringDefault()</td>
+                        <td>@Model.ExamResult.TotalRightAnswers.ToStringDefault()</td>
+                        <td>@Model.ExamResult.TotalWrongAnswers.ToStringDefault()</td>
                     </tr>
                 </tbody>
             </table>
@@ -69,7 +71,8 @@
     <div class="row">
         <div class="col-xs-12 col-12 table-responsive">
             <h2 class="page-header">
-                <small class="pull-right">Question Details: </small>
+                <small class="pull-right">Question Details: </small><br>
+                <small class="pull-right">Exam Id: @Model.ExamResult.ExamId </small>
             </h2>
             <table class="table table-striped">
                 <thead>
@@ -78,19 +81,19 @@
                         <th>Is Attempted</th>
                         <th>Is Correct</th>
                         <th>Obtained Marks</th>
-                        @*<th>Score</th>*@
+                        @*<th>Right Options</th>
+                        <th>Score</th>
+                        <th>Selected Options</th>*@
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var d in Model.Details)
                     {
                         <tr>
-                            <td>@d.ExamId</td>
                             <td>@(d.QuestionIndex.ToStringDefault())</td>
                             <td>@(d.IsAttempted)</td>
                             <td>@(d.IsCorrect)</td>
                             <td>@(d.ObtainedMarks.ToStringDefault("#,##0.00"))</td>
-                            @*<td>@(d.Score.ToStringDefault())</td>*@
                         </tr>
                     }
                 </tbody>
