--- a/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
+++ b/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
@@ -26,7 +26,7 @@
     <div class="row" style="margin-bottom:10px;">
         <div class="col-md-6">
             
-            <img width="100%" height="80%" src="@Model.ScanQuestionList[0].ScannedSheetScannedImageSourcePath" />
+            <img width="100%" height="80%" src="@Model.ScanQuestionList[0].ScannedSheetImageBase64" />
             
         </div>
         <div class="col-md-6" style="overflow-y: scroll;height:600px;">
@@ -59,6 +59,7 @@
         </div>
 
     </div>
+    
     <button id="btnsave" style="float:left;margin-right:150px;" class="btn btn-info">Save Data</button>
     @if (!string.IsNullOrEmpty(Model.PrevScannedSheetId))
     {
