--- a/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
@@ -54,7 +54,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>@Model.ExamResult.ExamId</td>
+                        <td>@Model.ExamResult.Id</td>
                         <td>@Model.ExamResult.TotalQuestions.ToStringDefault()</td>
                         <td>@Model.ExamResult.ObtainedMarks.ToStringDefault("#,##0.00")</td>
                         <td>@Model.ExamResult.TotalAttempted.ToStringDefault()</td>
