Android download link added in dashboard. Question Index updated in ascending order.

--- a/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
+++ b/Rio/Rio.Web/Views/ExamResult/ExamResultReport.cshtml
@@ -40,6 +40,9 @@
     <button type="button" class="btn btn-info">
         <a onclick="printDiv('divMain')" style="cursor: pointer; margin-right: 8px;color:white;">Print </a>
     </button>
+    <button type="button" class="btn btn-info">
+        <a onclick="downloadDiv('divMain')" style="cursor: pointer; margin-right: 8px;color:white;">Download </a>
+    </button>
 
 
 
