--- a/Rio/Rio.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Rio/Rio.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -75,13 +75,21 @@
             <a href="" class="card-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-lg-8 col-sm-6">
+    <div class="col-lg-6 col-sm-6">
         <div class="card s-dashboard-card-sm">
             <div class="card-body">
-                <h3>Download Link For OMR Setup<i class="fa fa-download"></i><br /></h3>
-                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link">OMR Setup <i class="fa fa-arrow-circle-right"></i></a>
+                <h3><i class="fa fa-download"></i>OMR Desktop Setup<br /></h3>
+                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link">OMR Desktop Setup <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-4 col-sm-6">
+        <div class="card s-dashboard-card-sm">
+            <div class="card-body">
+                <h3><i class="fa fa-download"></i>OMR Android<br /></h3>
+                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link">OMR Android Setup <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
     </div>
