ScannedSheet Name added

--- a/Rio/Rio.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Rio/Rio.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -79,7 +79,7 @@
         <div class="card s-dashboard-card-sm">
             <div class="card-body">
                 <h3><i class="fa fa-download"></i>OMR Desktop Setup<br /></h3>
-                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link">OMR Desktop Setup <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link" target="_blank">OMR Desktop Setup <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
         <div class="card s-dashboard-card-sm">
             <div class="card-body">
                 <h3><i class="fa fa-download"></i>OMR Android<br /></h3>
-                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link">OMR Android Setup <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="https://drive.google.com/file/d/1Nlzocgaw8uUKFUT3vdCqKS_N0c3gGRQc/view?usp=share_link" target="_blank">OMR Android Setup <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
     </div>
