--- a/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
+++ b/Rio/Rio.Web/Views/Rectify/ScanQuestions.cshtml
@@ -19,7 +19,7 @@
     <input type="text" id="CorrectedRollNo" value="@Model.ScanQuestionList[0].ScannedSheetCorrectedRollNo" />
     <br/>
     <h5 style="text-align:center">
-        Scanned Sheet Id: @Model.ScanQuestionList[0].ScannedSheetId  
+        Scanned Sheet Name: @Model.scannedSheetRow.SheetTypeName.ToUpper()
     </h5>
     
     <br /><br />
